src/test/ui/variance/variance-regions-unused-indirect.stderr
error[E0392]: parameter `'a` is never used
  --> $DIR/variance-regions-unused-indirect.rs:3:10
   |
LL | enum Foo<'a> {
   |          ^^ unused parameter
   |
   = help: consider removing `'a` or using a marker such as `std::marker::PhantomData`

error[E0392]: parameter `'a` is never used
  --> $DIR/variance-regions-unused-indirect.rs:7:10
   |
LL | enum Bar<'a> {
   |          ^^ unused parameter
   |
   = help: consider removing `'a` or using a marker such as `std::marker::PhantomData`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0392`.
